# Plover_Japanese_Machibari

./: README.md  setup.cfg
plover_japanese_machibari/: system.py
plover_japanese_machibari/dictionaries/: kana.json
plover_japanese_machibari/plover_japanese_machibari/dictionaries/: Plover_Japanese_Machibari.py  Plover_Japanese_MachibariRoma.py  kana(temp).json  karioki.txt
