[metadata]
name = plover_japanese_machibari
version = 0.0.1
description = none
long_description = file: README.md
long_description_content_type = text/markdown
author = meltedsoftcream
license = No license
url =https://github.com/meltedsoftcream/plover_japanese_machibari
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
                 plover>=4.0.0.dev12
packages =
	plover_japanese_machibari

[options.entry_points]
plover.system = 
 Japanese Machibari = plover_japanese_machibari.system